<resources>
    <string name="app_name">GuardianApi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_article">Search for Article</string>
    <string name="text_categories">Categories</string>
    <string name="text_sports">Sports</string>
    <string name="text_world_news">World News</string>
    <string name="text_lifestyle">Lifestyle</string>
    <string name="text_food">Food</string>
    <string name="text_fashion">Fashion</string>
    <string name="text_technology">Tech</string>
    <string name="text_travel">Travel</string>
    <string name="text_arts">Arts</string>
    <string name="text_recent_news">Recent News</string>
    <string name="text_see_more">See More</string>
    <string name="text_saved_articles">Saved Articles Will Show Here</string>
    <string name="text_search_article">What do You Want\nto Read Today?</string>
    <string name="text_no_search">Search for Article</string>
    <string name="text_search_topics">Search for Topics</string>
    <string name="text_no_results">No Results</string>
    <string name="text_celcius">℃</string>
    <string name="text_weekly">Weekly Report</string>
    <string name="text_weather_details">Weather Details</string>
    <string name="text_temp_felt">Temperature Felt</string>
    <string name="text_hpa">hPa</string>
    <string name="text_air_pressure">Air Pressure</string>
    <string name="text_min_temp">Min. Temperature</string>
    <string name="text_max_temp">Max. Temperature</string>
    <string name="text_percent">%</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_km_h">km/h</string>
    <string name="text_wind_speed">Wind Speed</string>
    <string name="text_swipe">Swipe Left / Right to Delete Saved Article</string>
    <string name="text_info_delete">* If deleted / undo is not working, try to refresh the page.</string>
    <string name="text_or">/</string>
    <string name="text_already_saved">Article Already Saved !</string>
    <string name="text_undo_success">Undo Success !</string>
    <string name="text_undo">Undo</string>
    <string name="text_removed_saved">Removed from Saved Articles !</string>
    <string name="text_save_article">Save Article</string>
    <string name="text_save_confirmation">Do you want to save this article ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_save_success">Article Save Successful !</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_share">\"Share to : \"</string>
    <string name="text_web_title">News</string>
    <string name="text_title_recent_news">Recent News</string>
    <string name="text_see_all_results">See All Results</string>
    <string name="text_jakarta">Jakarta</string>
    <string name="text_clouds">clouds</string>
    <string name="text_thunderstorm">thunderstorm</string>
    <string name="title_news">News</string>
    <string name="title_saved">Saved</string>
    <string name="title_weather">Weather</string>
    <string name="title_explore">Explore</string>
    <string name="title_save">Save</string>
    <string name="title_share">Share</string>
</resources>