<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainfragment.MainFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/marlin_soft"
                    android:textStyle="bold"
                    android:text="@string/text_categories"
                    android:textColor="@color/font_dark"
                    android:layout_marginTop="12dp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/ll_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_world_news"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_categories">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_sports_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_sports"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_world_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_lifestyle"
                    app:layout_constraintStart_toEndOf="@id/ll_sports"
                    app:layout_constraintTop_toTopOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_world_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_world_news"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_lifestyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_food"
                    app:layout_constraintStart_toEndOf="@id/ll_world_news"
                    app:layout_constraintTop_toTopOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_lifestyle_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_lifestyle"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ll_lifestyle"
                    app:layout_constraintTop_toTopOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_food_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_food"
                        android:textColor="@color/font_dark" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_fashion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_world_news"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_fashion_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_fashion"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_technology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_lifestyle"
                    app:layout_constraintStart_toEndOf="@id/ll_fashion"
                    app:layout_constraintTop_toBottomOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_tech_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_technology"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/ll_food"
                    app:layout_constraintStart_toEndOf="@id/ll_technology"
                    app:layout_constraintTop_toBottomOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_travel_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_travel"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ll_travel"
                    app:layout_constraintTop_toBottomOf="@id/ll_sports">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arts_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/marlin_soft"
                        android:gravity="center"
                        android:text="@string/text_arts"
                        android:textColor="@color/font_dark" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_recent_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/marlin_soft"
                    android:textStyle="bold"
                    android:text="@string/text_recent_news"
                    android:textColor="@color/font_dark"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_fashion" />

                <TextView
                    android:id="@+id/tv_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/marlin_soft"
                    android:text="@string/text_see_more"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_recent_news"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_recent_news" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recent_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="5dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tv_recent_news"
                    tools:listitem="@layout/article_row" />

                <TextView
                    android:id="@+id/tv_see_results"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/marlin_soft"
                    android:text="@string/text_see_all_results"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="16dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rv_recent_news"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/pb_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_article_clicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>