<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.article.searcharticle.SearchArticleFragment">

    <View
        android:id="@+id/v_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue_guardian"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:background="@color/blue_guardian"
        android:fontFamily="@font/lora_bold"
        android:text="@string/text_search_article"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_search_article"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@id/v_header"
        app:layout_constraintTop_toBottomOf="@id/v_header">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_article"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/text_no_search"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_search_article">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_articles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/article_row" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/iv_no_search"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/srl_content"
        app:layout_constraintEnd_toEndOf="@id/srl_content"
        app:layout_constraintStart_toStartOf="@id/srl_content"
        app:layout_constraintTop_toTopOf="@id/srl_content"
        app:layout_constraintVertical_bias="0.4"
        app:tint="#d3d3d3" />

    <TextView
        android:id="@+id/tv_no_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/marlin_soft"
        android:text="@string/text_search_topics"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/srl_content"
        app:layout_constraintStart_toStartOf="@id/srl_content"
        app:layout_constraintTop_toBottomOf="@id/iv_no_search" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_no_results"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/srl_content"
        app:layout_constraintEnd_toEndOf="@id/srl_content"
        app:layout_constraintStart_toStartOf="@id/srl_content"
        app:layout_constraintTop_toTopOf="@id/srl_content"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lottie_no_results_2" />

    <TextView
        android:id="@+id/tv_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/marlin_soft"
        android:text="@string/text_no_results"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/srl_content"
        app:layout_constraintStart_toStartOf="@id/srl_content"
        app:layout_constraintTop_toBottomOf="@id/lottie_no_results" />

    <ProgressBar
        android:id="@+id/pb_next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/srl_content"
        app:layout_constraintEnd_toEndOf="@id/srl_content"
        app:layout_constraintStart_toStartOf="@id/srl_content"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pb_article_clicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/srl_content"
        app:layout_constraintEnd_toEndOf="@id/srl_content"
        app:layout_constraintStart_toStartOf="@id/srl_content"
        app:layout_constraintTop_toTopOf="@id/srl_content"
        tools:visibility="visible" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/mcv_search_article"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_layout" />

            <include layout="@layout/shimmer_layout" />

            <include layout="@layout/shimmer_layout" />

            <include layout="@layout/shimmer_layout" />

            <include layout="@layout/shimmer_layout" />

            <include layout="@layout/shimmer_layout" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>